Quorum3/Library/Tests/Actions/Fail/InvalidActionNumber.quorum
action Main
    
end

action 1foo
    x = 1
end

